css/styles.css
/* ... */
header {
  display: flex;
  margin: 0;
  padding: 1rem 0.5rem;
  width: 100%;
  height: 100px;
  align-items: center;
  justify-content: space-between;
}

main {
  display: flex;
  color: black;
  width: 100%;
  height: fit-content;
  flex-grow: 1;
  flex-direction: column;
  align-items: center;
  align-content: center;
  min-height: 80vh;
}

footer {
  width: 100%;
  padding-bottom: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1rem;
  color: black;
  background-color: var(--orange);
  margin-top: auto;
}

/* OTHER ELEMENTS */

.page-title {
  font-family: "Square Peg";
  font-size: var(--text-h1);
}

h2 {
  margin: 1rem 0;
}

h4 {
  margin-top: 1rem;
}

.logo-container {
  display: flex;
  align-items: center;
  gap: 1rem;
  text-decoration: none;
  color: black;
}

.separator-line {
  border-left: var(--border) grey;
  margin: 0 auto;
  height: 30px;
}

.quick-link-containers {
  display: flex;
  flex-direction: column;
  width: 90%;
  gap: 1rem;
  margin: 2rem 0;
}

.quick-link-content,
.about-blog {
  display: flex;
  flex-direction: column;
  background-color: var(--orange);
  border-radius: 10px;
  align-items: center;
  gap: 1rem;
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
}

.quick-link-content {
  width: 100%;
  padding: 1rem 0;
}

.about-blog {
  width: 90%;
  margin-top: 1rem;
  padding: 1rem;
}

.footer-content {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.footer-content a {
  text-decoration: none;
  color: black;
}

.footer-content a:hover {
  text-decoration: underline;
}

.about-author,
.author-of {
  width: 90%;
  padding: 0.5rem;
  margin: 1rem 0;
  border-radius: 10px;
  background-color: var(--orange);
}

.about-author {
  display: flex;
  gap: 1rem;
}

.author-image > .user-profile-image {
  width: 100%;
}

.author-text {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.author-of {
  display: flex;
  flex-direction: column;
}

.author-image-title {
  gap: 2rem;
}

.btn {
  background-color: var(--green);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  width: 140px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 1rem;
}

.footer-copyright {
  align-self: flex-end;
  font-weight: bold;
}

.content-title {
  margin: 1rem 0 1rem 5rem;
  align-self: normal;
}

.card,
.card-small {
  width: 300px;
  background-color: var(--light-grey);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  border-radius: 5px;
  text-decoration: none;
  color: black;
  padding-bottom: 2rem;
}

.card {
  max-height: 400px;
}

.card a {
  text-decoration: none;
  color: black;
}

.card h3,
.card p {
  margin: 0.5rem 0 0 1rem;
}

.card-small {
  display: flex;
  height: 80px;
  padding-bottom: 0;
}

.card-small img {
  width: 50%;
  height: 100%;
  border-radius: 5px 0 0 5px;
}

.card-small-text {
  display: flex;
  flex-direction: column;
  margin: 0.5rem 0 0 1rem;
  width: 50%;
}

.card-small-text h3,
.card-small-text p,
.card-small-text h4 {
  font-size: 80%;
}

.card-small-text p {
  font-weight: 100;
}

.card-small-text h4 {
  margin: 0;
}

.blog-page-content {
  display: grid;
  margin: 1rem 0;
  width: 90%;
  grid-gap: 3rem;
  grid-template-areas:
    "blog-grid1"
    "blog-grid2"
    "blog-grid3"
    "blog-grid4"
    "blog-grid5";
}

.blog-grid1 {
  grid-area: blog-grid1;
}

.blog-grid2 {
  grid-area: blog-grid2;
}

.blog-grid3 {
  grid-area: blog-grid3;
}

.blog-grid4 {
  grid-area: blog-grid4;
}

.blog-grid5 {
  grid-area: blog-grid5;
}

.blog-page-card {
  display: flex;
  flex-direction: column;
  background-color: var(--orange);
  box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  border-radius: 10px;
  padding: 1rem;
}

.blog-page-content h3,
.blog-comments h3 {
  margin: 1rem 0;
}

.blog-author-info {
  display: flex;
  gap: 1rem;
}

.blog-author-info p {
  font-size: 1rem;
}

.author-name-title {
  margin-top: 0;
  margin-bottom: 1rem;
}

.blog-post-info {
  margin-top: 2rem;
  font-size: 0.9rem;
  align-self: center;
}

.index-list-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.previous-articles-list {
  width: 80%;
}

.previous-articles-link {
  text-decoration: none;
  color: black;
}

.previous-articles-link:hover {
  text-decoration: underline;
}

.blog-list-wrapper {
  display: flex;
  flex-direction: column;
}

.blog-list-container,
.search-content {
  display: grid;
  margin-bottom: 2rem;
  gap: 1rem;
  grid-template-columns: 1fr;
  width: 90%;
  min-height: 50vh;
}

.blog-hidden {
  display: none;
}

.welcome-content {
  gap: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.blog-list-button {
  align-self: end;
  justify-self: end;
}

.blog-similar-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
  align-items: center;
}

.author-of-content {
  display: grid;
  padding: 1rem 0;
  justify-items: center;
  grid-template-columns: 1fr;
  gap: 1rem;
}

.blog-recipe-ingredients {
  margin-bottom: 1rem;
}

.blog-comments {
  width: 90%;
  margin-bottom: 2rem;
}

.blog-comments-container {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
}

.blog-user-comment {
  display: grid;
  gap: 0.5rem;
  grid-template-areas:
    "comment-grid1 comment-grid2"
    "comment-grid3 comment-grid3";
  background-color: var(--light-grey);
  padding: 0.5rem;
  border-radius: 5px;
}

.comment-grid1 {
  grid-area: comment-grid1;
}

.comment-grid2 {
  grid-area: comment-grid2;
}

.comment-grid3 {
  grid-area: comment-grid3;
}

.blog-user-comment h4 {
  margin: 0 0 0.5rem 0;
}

.user-comment-date {
  font-size: 60%;
}

.missing-comments {
  margin: 0 auto;
}

.random-element-container .card {
  display: block;
  height: 300px;
}

/* NAVIGATION */

.navbar,
.navbar ul,
.nav-item {
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style-type: none;
}
/* ... */

